--- a/_posts/cpp/2017-02-05-Call-by.md
+++ b/_posts/cpp/2017-02-05-Call-by.md
@@ -6,7 +6,7 @@ modified: 2017-02-05
 tags: [C++]
 comments: true
 image:
-  feature: abstract-3.jpg
+  feature: /Computer/seth-schwiet-40984.jpg
 ---
 
 ##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
@@ -21,7 +21,7 @@ void swap(int* a, int* b)
 	*a = *b;
 
 	a++; //잘못 들어간 코드
-	
+
 	*b = temp;
 }
 
@@ -57,7 +57,7 @@ int main(void)
 </figure>
 
 a라는 이름과 b라는 이름을 더 붙여 줌으로써 함수를 호출 하는 곳의 변수에 접근 할 수 있게된다.
-하지만 main함수 안을 보면 해당 함수가 Call-by-value인지 Call-by-reference인지 구분하기 어렵게될 수 있다. 
+하지만 main함수 안을 보면 해당 함수가 Call-by-value인지 Call-by-reference인지 구분하기 어렵게될 수 있다.
 또한 call-by-value가 아닌 reference를 이용한 call-by-reference는 함수 호출 시 복사를 통해 값이 전달되지 않기 때문에 부담이 적다.
 
 ## Call-by-value
