--- a/_posts/cpp/2017-02-17-const.md
+++ b/_posts/cpp/2017-02-17-const.md
@@ -5,14 +5,12 @@ description: "Const 함수에 대해"
 modified: 2017-02-17
 tags: [C++]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: /Computer/seth-schwiet-40984.jpg
 ---
 
 ##### ** 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 
-## const 함수 
+## const 함수
 
 ```cpp
 int GetX() const;
@@ -21,7 +19,7 @@ void ShowRecInfo() const;
 //출처 : 열혈 C++프로그래밍
 ```
 
-위에 쓰여진 'const'는  
+위에 쓰여진 'const'는
 *이 함수 내에서는 멤버 변수에 저장된 값을 변경하지 않겠다.* 라는 의미이다.
 <br /><br />
 이러한 의미의 연장선에서
@@ -36,7 +34,7 @@ class SimpleClass
 		{
 			num = n;
 		}
-		
+
 		int GetNum()  // const 선언이 추가되어야 아래의 컴파일 에러가 소멸
 		{
 			return num;
@@ -45,15 +43,15 @@ class SimpleClass
 		void ShowNum() const
 		{
 			cout<<GetNum()<<endl; //컴파일 에러 발생
-		}       
-	   //출처 : 열혈 C++프로그래밍	
+		}
+	   //출처 : 열혈 C++프로그래밍
 };
 ```
 
-위의 정의에서 **ShowNum** 함수 내에서 컴파일 에러가 발생하는 이유는 **GetNum** 함수가 **const** 로 선언되어있지 않기 때문이다.   
+위의 정의에서 **ShowNum** 함수 내에서 컴파일 에러가 발생하는 이유는 **GetNum** 함수가 **const** 로 선언되어있지 않기 때문이다.
  **GetNum** 이 아무런 값도 변경하지 않음에도 에러가 발생하는 것은 지금은 변경하지 않지만  **const** 선언이 되어있지 않기때문에
-언제든 멤버변수의 값을 변경할 가능성을 가지고 있기 때문이다.  
-그러한 이유 때문에 **const 함수** 내에서는 **const가 아닌 함수**(변경할 가능성을 가지고 있는 함수)의 호출을 제한한다.  
+언제든 멤버변수의 값을 변경할 가능성을 가지고 있기 때문이다.
+그러한 이유 때문에 **const 함수** 내에서는 **const가 아닌 함수**(변경할 가능성을 가지고 있는 함수)의 호출을 제한한다.
 
 <br /><br />
 #### 비슷한 예제로
@@ -87,4 +85,3 @@ class LiveClass
 };
 ```
 #### const 참조자도 위와 동일한 맥락으로 const가 아닌 함수의 호출이 제한된다.
-
