Graphics_pipeline_post

--- a/_posts/cpp/2017-02-05-Call-by.md
+++ b/_posts/cpp/2017-02-05-Call-by.md
@@ -7,6 +7,7 @@ tags: [C++]
 comments: true
 image:
   feature: /Computer/seth-schwiet-40984.jpg
+  credit: unsplash
 ---
 
 ##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
