--- a/_posts/sample_post/2017-01-11-sample.md
+++ b/_posts/sample_post/2017-01-11-sample.md
@@ -9,7 +9,18 @@ image:
   credit: dargadgetz
   creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
+```mermaid
+graph LR;
+d --> c
+c --> e
+e --> d
+e --> c
+```
 
+$$
+X \times Y \pi \sqrt((255)\times500)
+\sqrt 2\sqrt2
+$$
 # Heading 1
 
 ## Heading 2
@@ -29,8 +40,8 @@ image:
 {: .image-right}
 
 *This is emphasized*.
-H<sub>2</sub>O. 
-<cite>(That’s a citation)</cite>. 
+H<sub>2</sub>O.
+<cite>(That’s a citation)</cite>.
 <u>Underline</u>.
 HTML and <abbr title="cascading stylesheets">CSS</abbr>
 
