--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -15,8 +15,8 @@ image:
 #### 여러 API를 사용할 때 Sync를 맞추어주거나 Display 장치를 관리하는 일을 한다.
 #### OS와 Windowing 시스템을 연결시켜준다.
 #### 쿼리를 날려서 지원하는 것이 무엇인지 알려준다.
-
-### EGL Function
+<br />
+> ### EGL Function
 
 #### Display_생성 --> Surface_생성-->Context 생성
 
@@ -25,17 +25,17 @@ image:
 - Context - 그리기위한 지원의 모듬
 
 모니터가 여러개이면? Surface가 여러개일 수도..
+<br />
+> ### Windows Events
 
-### ==Windows Events==
-
-### WM_CREATE
+- ### WM_CREATE
 > #### 윈도우가 처음 실행되었을 때 화면을 초기화
 > #### EGL 초기화
 
-### WM_PAINT
+- ### WM_PAINT
 > #### 화면 update가 필요할 때 호출
 > #### eglswapBuffers()가 필요
 
-### WM_DESTROY
+- ### WM_DESTROY
 > #### 윈도우가 삭제될 때 실행
 > #### EGL 삭제
