--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -10,13 +10,12 @@ image:
 ---
 ##### ** 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 
-## EGL
 #### OpenGL ES 2.0 의 경우에는 화면에 표시하는 기능이 없다. 그래서 화면에 표시해주는 기능이 필요한데 그 역할을 EGL이 해준다.
 #### 여러 API를 사용할 때 Sync를 맞추어주거나 Display 장치를 관리하는 일을 한다.
 #### OS와 Windowing 시스템을 연결시켜준다.
 #### 쿼리를 날려서 지원하는 것이 무엇인지 알려준다.
 <br />
-> ### EGL Function
+## EGL Function
 
 #### Display_생성 --> Surface_생성-->Context 생성
 
@@ -26,7 +25,7 @@ image:
 
 모니터가 여러개이면? Surface가 여러개일 수도..
 <br />
-> ### Windows Events
+## Windows Events
 
 - ### WM_CREATE
 > #### 윈도우가 처음 실행되었을 때 화면을 초기화
