--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -9,7 +9,7 @@ image:
   credit: unsplash
 ---
 ##### ** 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
-
+---
 #### OpenGL ES 2.0 의 경우에는 화면에 표시하는 기능이 없다. 그래서 화면에 표시해주는 기능이 필요한데 그 역할을 EGL이 해준다.
 #### 여러 API를 사용할 때 Sync를 맞추어주거나 Display 장치를 관리하는 일을 한다.
 #### OS와 Windowing 시스템을 연결시켜준다.
@@ -25,16 +25,17 @@ image:
 
 모니터가 여러개이면? Surface가 여러개일 수도..
 <br />
+<br />
 ## Windows Events
 
-- ### WM_CREATE
+### WM_CREATE
 > #### 윈도우가 처음 실행되었을 때 화면을 초기화
 > #### EGL 초기화
 
-- ### WM_PAINT
+### WM_PAINT
 > #### 화면 update가 필요할 때 호출
 > #### eglswapBuffers()가 필요
 
-- ### WM_DESTROY
+### WM_DESTROY
 > #### 윈도우가 삭제될 때 실행
 > #### EGL 삭제
