--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -17,7 +17,7 @@ image:
 <br />
 ## EGL Function
 
-#### Display_생성 --> Surface_생성-->Context 생성
+### Display_생성 --> Surface_생성-->Context 생성
 
 - Display - 장치
 - Surface - 장치의 그릴 부분
@@ -39,3 +39,26 @@ image:
 ### WM_DESTROY
 > #### 윈도우가 삭제될 때 실행
 > #### EGL 삭제
+
+## EGL 생성 순서
+
+### eglInitialize -> eglBind() -> eglChooseconfig() -> eglCreateWindowSurface() -> eglCreateContext() -> eglMakeCurrent()
+
+#### eglBind() - 이 EGL에는 openGL ES 2.0을 쓰겠다! 혹은 openVG를 쓰겠다. 라고 선언하는 것
+#### eglMakeCurrent() - Context switching을 하게 함.
+
+## EGL 반환 순서
+
+### eglMakeCurrent() -> eglDestroyContext() -> eglDestroySurface() -> eglTerminate()
+
+
+## Double Buffering
+![DoubleBuffering](/images/CG/DoubleBuffering.gif)
+[http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html](http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html
+)
+
+### Back Buffer - 그리고 있는 Buffer
+### Front Buffer - 화면에 보여지는 Buffer
+
+#### 무언가를 그리고 있는 것을 User에게 바로 보여주게되면 번쩍번쩍하기 때문에 상당히 불편하다. (그려지는 과정이 보여지기 때문에)
+#### 그래서 그리고 있는 화면과 표시되는 화면을 분리하여 swap하면서 표시한다. (eglSwapbuffers())
