--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -40,6 +40,8 @@ image:
 > #### 윈도우가 삭제될 때 실행
 > #### EGL 삭제
 
+<br />
+<br />
 ## EGL 생성 순서
 
 ### eglInitialize -> eglBind() -> eglChooseconfig() -> eglCreateWindowSurface() -> eglCreateContext() -> eglMakeCurrent()
@@ -47,11 +49,14 @@ image:
 #### eglBind() - 이 EGL에는 openGL ES 2.0을 쓰겠다! 혹은 openVG를 쓰겠다. 라고 선언하는 것
 #### eglMakeCurrent() - Context switching을 하게 함.
 
+<br />
 ## EGL 반환 순서
 
 ### eglMakeCurrent() -> eglDestroyContext() -> eglDestroySurface() -> eglTerminate()
 
 
+<br />
+<br />
 ## Double Buffering
 ![DoubleBuffering](/images/CG/DoubleBuffering.gif)
 [http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html](http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html
@@ -62,3 +67,6 @@ image:
 
 #### 무언가를 그리고 있는 것을 User에게 바로 보여주게되면 번쩍번쩍하기 때문에 상당히 불편하다. (그려지는 과정이 보여지기 때문에)
 #### 그래서 그리고 있는 화면과 표시되는 화면을 분리하여 swap하면서 표시한다. (eglSwapbuffers())
+
+> flickering을 줄여준다.  
+> double buffering 떄문에 image를 egl에 달라고 요청하면 default로 1장이 아닌 2장을 준다.
