--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -3,9 +3,9 @@ layout: post
 title: EGL
 description:
 modified: 2017-04-02
-tags: [Computer Graphics]
+tags: [Computer Graphics, OpenGL]
 image:
-  feature: Computer/marius-masalar-132751.jpg
+  feature: background/Computer/marius-masalar-132751.jpg
   credit: unsplash
 ---
 ##### ** 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
@@ -29,18 +29,17 @@ image:
 ## Windows Events
 
 ### WM_CREATE
-> #### 윈도우가 처음 실행되었을 때 화면을 초기화
-> #### EGL 초기화
+>  윈도우가 처음 실행되었을 때 화면을 초기화
+>  EGL 초기화
 
 ### WM_PAINT
-> #### 화면 update가 필요할 때 호출
-> #### eglswapBuffers()가 필요
+>  화면 update가 필요할 때 호출
+>  eglswapBuffers()가 필요
 
 ### WM_DESTROY
-> #### 윈도우가 삭제될 때 실행
-> #### EGL 삭제
+>  윈도우가 삭제될 때 실행
+>  EGL 삭제
 
-<br />
 <br />
 ## EGL 생성 순서
 
@@ -56,7 +55,6 @@ image:
 
 
 <br />
-<br />
 ## Double Buffering
 ![DoubleBuffering](/images/CG/DoubleBuffering.gif)
 [http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html](http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html
@@ -68,5 +66,5 @@ image:
 #### 무언가를 그리고 있는 것을 User에게 바로 보여주게되면 번쩍번쩍하기 때문에 상당히 불편하다. (그려지는 과정이 보여지기 때문에)
 #### 그래서 그리고 있는 화면과 표시되는 화면을 분리하여 swap하면서 표시한다. (eglSwapbuffers())
 
-> flickering을 줄여준다.  
+> flickering을 줄여준다.
 > double buffering 떄문에 image를 egl에 달라고 요청하면 default로 1장이 아닌 2장을 준다.
