Shader_post && Shader_programming_post

--- a/_posts/ComputerGraphics/2017-04-03-Shader.md
+++ b/_posts/ComputerGraphics/2017-04-03-Shader.md
@@ -36,7 +36,10 @@ Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 F
 ## Fragment Shader : primitive -> fragments
  각 vertex의 색깔이 정해지게 되고 점 선 삼각형의 모양이 정해지고 난 뒤에 interpolation이 일어나게 되어 색이 채워지게 된다.
 
+ - fragments = pixel(location) + associated data
+
 <br />
+
 ---
 
 <br />
@@ -44,22 +47,72 @@ Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 F
 OpenGL Shader Language
 <br />
 > ### Data Type
+
 * Matrix : mat3, mat4
 * Vectors : vec2, vec3, vec
 * 더 정리할 것
 
+<br />
 
 ## GPU Architecture
+### Vertex Shader
 ![Vertex Shader](/images/CG/vertex_shader.jpg)
-- Uniform - 모두가 함께 쓰는 Global input variable
-- Attribute - Vertex 속성 (Color / Position / NormalVerctor / Texture)
+#### Input
+- Uniform
+    - 모두가 함께 쓰는 Global input variable
+- Attribute
+    - Vertex 속성 (Color / Position / NormalVerctor / Texture)
     - Vertex array(정점 배열)을 이용해 제공된 정점 데이터
-- Varying - Vertex Shader의 결과물로써 Fragment Shader의 입력 값이 된다.
-- gl_Position - 각 attribute 의 위치 정보
-- gl_FrontFacing - 삼각형 앞/뒷면 구분 용
+- Sampler(optional)
+    - Texture를 이용 (나중에..)
+
+#### Output
+- Varying
+    - Vertex Shader의 결과물로써 Fragment Shader의 입력 값이 된다.
+    - 이 Vertex의 색깔은 (빛/투명도 등)을 계산하니까 이 색깔이야! 라고 나온 Output
+- gl_Position
+    - 각 attribute 의 위치 정보
+- gl_FrontFacing
+    - 삼각형 앞 / 뒷면 구분 용
+    - 점 / 선은 해당사항이 없음
 - gl_PointSize
 
+<br />
+### Fragment Shader
 ![Fragment Shader](/images/CG/fragment_shader.jpg)
 
+#### Input
+- gl_FragCoord(gl_Position) / gl_FrontFacing / gl_PointSize / Varying
+    - Vertex Shader에서 계산되어 나온 Output을 그대로 쓴다.
+    - gl_FragCoord = gl_Position?
+- Uniform
+    - 전화가 오면 50% 투명하게 그려라?!
+        - 병렬로 처리하니까 위와 같은 것을 처리하려면 Global Transparent를 설정한다든가 해서 한번에 딱 적용 하는 그런..
+    - 갑자기 Uniform 이 바뀌면 Pipeline 중에 어디부터 적용을?
+        - Pipeline이 깨진다
+        - 그래서 Uniform 을 자주 바꾸면 느려지게된다.
 
-Shader Programming 25분까지 봄
+#### Output
+- gl_FragColor
+    - 어떤 Pixel의 색깔은 무엇이다. 무엇이다.
+<br />
+---
+<br />
+(작성중)
+## Data type 관련
+> ### Swizzling and Selection
+
+- x, y, z, w
+- r, g, b, a
+- s, t, p, q
+- a[2] == a.b == a.z == a.p
+- vec4 a;
+  a.yz = vec2(1.0, 2.0);
+- v = (x, y, z, w)
+    - vec4 a = v;
+    - vec4 a = v.xyzw; // default
+    - vec4 a = v.wzyx; // suffled
+    - vec4 a = v.xxyy; // repeated
+    - vec3 b = v.xyz; // selection
+    - v.xyz = b;
+    - v.xyzw = v.wzyx;
