--- a/_posts/cpp/2017-02-13-alloc.md
+++ b/_posts/cpp/2017-02-13-alloc.md
@@ -5,7 +5,7 @@ description: 메모리 동적 할당
 modified: 2017-02-13
 tags: [C, C++]
 image:
-  feature: background/Computer/seth-schwiet-40984.jpg
+  feature: background/Computer/5.jpg
   credit: unsplash
 ---
 
