--- a/_posts/cpp/2017-02-05-Call-by.md
+++ b/_posts/cpp/2017-02-05-Call-by.md
@@ -6,7 +6,7 @@ modified: 2017-02-05
 tags: [C++]
 comments: true
 image:
-  feature: background/Computer/seth-schwiet-40984.jpg
+  feature: background/Computer/3.jpg
   credit: unsplash
 ---
 
