--- a/_posts/cpp/2017-02-17-const.md
+++ b/_posts/cpp/2017-02-17-const.md
@@ -5,7 +5,7 @@ description: "Const 함수에 대해"
 modified: 2017-02-17
 tags: [C++]
 image:
-  feature: background/Computer/seth-schwiet-40984.jpg
+  feature: background/Computer/2.jpg
   credit: unsplash
 ---
 
