--- a/_posts/compiler/2017-04-11-lex.md
+++ b/_posts/compiler/2017-04-11-lex.md
@@ -1,11 +1,76 @@
 ---
 layout: post
-title: lex
+title: Lex
 description:
 modified: 2017-04-11
 tags: [Compiler]
 image:
-  feature:      background/Computer/4.jpg
+  feature: background/Computer/4.jpg
   credit: unsplash
 ---
 #####  개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
+---
+
+## Lexical analyzer
+![interaction](/images/compiler/interactionLex.png)
+
+> 각 문자를 읽어들여서 lexeme이라는 단위로 묶고 lexeme을 기반으로 token을 생성한다.<br />
+> 공백이나 주석을 삭제한다.<br />
+> error가 발생한 line number를 저장해둔다.<br />
+
+<br />
+
+## Lexeme
+> Lowest-level of syntatic unit<br />
+> 소스 코드에 존재하는 의미 있는 문자열, 식별자, 숫자, 키워드 등을 의미한다.
+
+<br />
+
+## Token
+> Category of lexemes & Terminal Symbol in Grammar<br />
+> 토큰 이름과 속성 값으로 구분되는 데이터 쌍으로써 각 토큰은 토큰의 패턴에 부합하는 어휘 항목을 갖는다.
+
+<br />
+
+![lexical](/images/compiler/lexical.png){: .image-left}
+> <br/><br/><id, pointer to symbol table entry for position><br />
+> < assign_op ><br />
+> <id, pointer to symbol table entry for initial><br />
+> < add_op ><br />
+> <id, pointer to symbol table entry for rate><br />
+> < mult_op ><br />
+> <num, integer value 60><br />
+
+| 분류 | 예 |
+|:---:|:---:|
+| Keywords | if, then, while |
+| Operator | plus, minus |
+| Puctuation Symbols | comma, lparen |
+| Identifier | id |
+| number | num |
+| Literal strings | literal |
+
+<br/>
+
+| 토큰이름 | 어휘 항목의 예 | 토큰패턴 |
+|:----:|:---:|:---:|
+| id | val, distance, alpha | 첫번째 문자가 숫자가 아니고, <br />특수문자를 포함하지 않는 모든 문자열 |
+| number | 0, 1, 2, -6, 1.23, 6.2E22 | 모든 숫자, 문자 e를 <br />제외한 문자가 있으면 이 패턴에 위배 |
+| const | const | const라는 문자열만 이 패턴에 부합 <br />conST, Const 등은 모두 이 패턴에 위배 |
+| if | if | if라는 문자열만 이 패턴에 부합 <br /> If, iF, IF는 모두 이 패턴에 위배 |
+| lt | < | < |
+
+<br />
+
+## Pattern
+> #### 토큰이 어휘항목을 서술하는 규칙으로써 정규 문법에 따라 표현된다.
+> #### 각 토큰 들에는 그에 따른 토큰 패턴이 <token name, attribute value> 형태로 존재한다.
+
+<br />
+
+<br />
+
+---
+* 참고
+    * [http://untitledtblog.tistory.com/10](http://untitledtblog.tistory.com/10)
+    * [http://booolean.tistory.com/471](http://booolean.tistory.com/471)
