--- a/_posts/compiler/2017-04-11-lex.md
+++ b/_posts/compiler/2017-04-11-lex.md
@@ -33,13 +33,13 @@ image:
 <br />
 
 ![lexical](/images/compiler/lexical.png){: .image-left}
-> <br/><br/><id, pointer to symbol table entry for position><br />
-> < assign_op ><br />
-> <id, pointer to symbol table entry for initial><br />
-> < add_op ><br />
-> <id, pointer to symbol table entry for rate><br />
-> < mult_op ><br />
-> <num, integer value 60><br />
+<br/><id, pointer to symbol table entry for position><br />
+< assign_op ><br />
+<id, pointer to symbol table entry for initial><br />
+< add_op ><br />
+<id, pointer to symbol table entry for rate><br />
+< mult_op ><br />
+<num, integer value 60><br />
 
 | 분류 | 예 |
 |:---:|:---:|
@@ -66,10 +66,7 @@ image:
 > #### 토큰이 어휘항목을 서술하는 규칙으로써 정규 문법에 따라 표현된다.
 > #### 각 토큰 들에는 그에 따른 토큰 패턴이 <token name, attribute value> 형태로 존재한다.
 
-<br />
-
-<br />
-
+<br/>
 ---
 * 참고
     * [http://untitledtblog.tistory.com/10](http://untitledtblog.tistory.com/10)
