--- a/_posts/compiler/2017-04-18-Lex2.md
+++ b/_posts/compiler/2017-04-18-Lex2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Lex
+title: Lex2
 description:
 modified: 2017-04-11
 tags: [Compiler]
@@ -14,24 +14,74 @@ image:
 ## Lexical Errors
 > Token으로 이루어진 Pattern들 중 어떤 것도 Input의 Prefix와 일치하지 않을 떄
 > Lexical error vs Syntax Error
+
 fi (a == f(x))
 * Lexical : 그냥 통과
 * Syntax : 오류 발생
+* fi 가 if를 잘 못 써서 문제가 생긴 것인지 어떤것이 문제가 생겼는지에 대해 어휘 분석만으로는 알 수가 없다.
+
+#### Error Recovery
+* Panic Mode : 오류 부분을 일단 무시하고 진행
 
 ## Specification of Tokens
 > **Alphabet** 은 a, b, 1, 2, /와 같은 기호의 유한 집합이다.
 > **String** 은 알파벳에 속한 기호들의 유한한 나열
 > 길이가 **0**인 String은 empty String이라고 한다.
-* Length of String : | s |
+
+* Length of String : \| s \|
 * the concatenation of two String : s1*s2 , s1s2
 * the exponentiation of String s : s<sup>1</sup>, s<sup>2</sup>
 
 ## Operation on Language
-![](/images/compiler/operation.png)
+![](/images/compiler/Operation.png)
 
+## Lex Specifications
 
+```lex
+%{
+C 코드
+%}
 
+declaration
+%%
+translation rules
+%%
+auxiliary procedures
+```
+### declaration
+* declaration of variables
+* manifest constants
+* regular definitions
 
+### translation rules
+p<sub>1</sub> { action-1 }<br/>
+p<sub>2</sub> { action-2 }<br/>
+p<sub>3</sub> { action-3 }<br/>
+...
+
+p<sub>i</sub> : regular expression<br/>
+action-i : program fragments
+<br/>
+
+## Matches and Actions
+### Type of matches
+1. 다른 길이의 패턴이 여러개가 적용될 때
+    * abc123 을 인식 할 때 abc / abc123 이라는 pattern이 있다면 둘 중 더 긴 abc123에 우선 순위를 둔다.
+2. 같은 길이의 패턴이 여러개가 적용될 때
+    * abc123 을 인식 할 때 abc / {letter}* 이라는 pattern이 있다면 두 개 다 abc 라는 똑같은 길이를 인식하고 있기 때문에 먼저 선언 된 것부터 우선 순위가 있다.
+3. 어떤 pattern도 적용되지 않는다면
+    * default 룰 로써 그냥 출력한다.
+
+## Special Directives
+### ECHO
+읽은 것 그대로 출력
+### REJECT
+
+### yymore()
+
+### yyless(n)
+
+### yywrap()
 
 ---
 * 참고
