--- a/_posts/compiler/2017-06-13-Topdown.md
+++ b/_posts/compiler/2017-06-13-Topdown.md
@@ -21,10 +21,15 @@ image:
 * Recursive Descent Parsing(재귀적 하강 파싱)
 * Predict Parsing(예측 파싱)
 
-## Recursive Descent Parsing(재귀적 하강 파싱)
-> Top-Down Parsing 의 한 종류이다.  
-> Non-terminal 당 하나의 Procedure가 작성된다.
-> 
+### Recursive Descent Parsing(재귀적 하강 파싱)
+1. Top-Down Parsing 의 한 종류이다.  
+2. Non-terminal 당 하나의 Procedure가 작성된다.
+
+### LL(1) Parser
+1. Recursive Descent Parsing 의 단점을 보완하기 위해 나온 Top-Down Parser의 일종이다.  
+2. LL은 각각 Left scaning / Leftmost derivation을 의미한다.  
+3. 즉, LL(1) Parser는 입력 문자열을 왼쪽에서 오른쪽으로 읽어가며 leftmost derivation을 진행한다.  
+4. 마지막으로 LL(1) 의 괄호에 표기된 숫자 1은 Parsing 동작을 결정하는 각 단계에서 1개의 입력 기호를 미리 읽는 다는 것(lookahead)을 나타낸다. 
 
 
 ---
