--- a/_posts/compiler/2017-06-14-Yacc_1.md
+++ b/_posts/compiler/2017-06-14-Yacc_1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Yacc-1
+title: Yacc_1
 description:
 modified: 2017-06-13
 tags: [Compiler]
@@ -26,8 +26,8 @@ image:
 
 <br/>
 
-## Yacc Specification
-### Structure
+# Yacc Specification
+## Structure
 ```
 declarations
 %%
@@ -36,8 +36,8 @@ translation rules
 supporting C routines
 ```
 <br/>
-### declarations part
-#### Two Section  
+## declarations part
+### Two Section  
 
 * First Section 
 > ordinary C declaration enclosed %{ %}  
@@ -58,7 +58,7 @@ extern int yylval;
 ```
 
 <br/>
-### translation rules
+## translation rules
 * each rule consists of a grammar production and the associated semantic action  
 
 ```
@@ -73,13 +73,13 @@ extern int yylval;
 * semantic action : C routine which executes at reduction
 
 <br/>
-### supporting C routines part
+## supporting C routines part
 * lex 코드와 결합시 yylex()를 사용한다.
 * main() and yyerror() routines
 * 필요한 원하는 거 작성
 
 <br/>
-### Symbol values and actions
+## Symbol values and actions
 * $$ : left side에 nonterminal 값을 나타냄
 * $i : (i는 몇번째인지) right side에 i번째 grammar symbol을 나타냄
 
