--- a/_posts/ComputerGraphics/2017-04-03-Shader.md
+++ b/_posts/ComputerGraphics/2017-04-03-Shader.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Shader(작성 중)
+title: Shader
 description:
 modified: 2017-04-02
 tags: [Computer Graphics, OpenGL]
@@ -8,7 +8,7 @@ image:
   feature: background/Computer/4.jpg
   credit: unsplash
 ---
-##### ** 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
+##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 ---
 
 ![](/images\CG\arch.jpg)
@@ -31,10 +31,16 @@ Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 F
 * 1 vertex - a point
 * 2 vertex - a line segment
 * 3 vertex - a triangle
+* 각각 Vertex 간의 관계, 모양을 결정한다.
+
+## Rasterization
+* Primitive Assembly에서 생성된 모양에 따라 Fragment들을 생성한다.
 
 <br />
 ## Fragment Shader : primitive -> fragments
- 각 vertex의 색깔이 정해지게 되고 점 선 삼각형의 모양이 정해지고 난 뒤에 interpolation이 일어나게 되어 색이 채워지게 된다.
+* 각 vertex의 색깔이 정해지게 되고 점 선 삼각형의 모양이 정해지고 Rasterization까지 실행된 뒤에 실행된다.
+* 각 vertex 색깔을 기반으로 interpolation이 일어나게 되어 색이 채워지게 된다.
+* 경우에 따라 Shading 기법 및 Texture 여부에 따라 정해지기도 한다.
 
  - fragments = pixel(location) + associated data
 
@@ -95,10 +101,12 @@ OpenGL Shader Language
 #### Output
 - gl_FragColor
     - 어떤 Pixel의 색깔은 무엇이다. 무엇이다.
+
 <br />
+
 ---
+
 <br />
-(작성중)
 ## Data type 관련
 > ### Swizzling and Selection
 
