--- a/_posts/ComputerGraphics/2017-04-08-VBO.md
+++ b/_posts/ComputerGraphics/2017-04-08-VBO.md
@@ -13,8 +13,8 @@ image:
 
 ## VBO (Vertex Buffer Object)
 ### 쓰는 이유?
-매번 Draw 명령을 칠 때마다 데이터를 보내게 되면 CPU와 GPU 사이에 데이터가 많이 움직이게 되어 성능이 떨어지게 된다.
-그렇기 때문에 *자주 쓰는 데이터*를 **VBO**를 통해서 **Graphics Memory**에 먼저 넣어둔다.
+매번 Draw 명령을 칠 때마다 데이터를 보내게 되면 CPU와 GPU 사이에 데이터가 많이 움직이게 되어 성능이 떨어지게 된다.  
+그렇기 때문에 **자주 쓰는 데이터**를 **VBO**를 통해서 **Graphics Memory**에 먼저 넣어둔다.
 ### 장점
 1. Rendering Performence
 2. Memory bandwidth
