--- a/_posts/ComputerGraphics/2017-04-03-Shader.md
+++ b/_posts/ComputerGraphics/2017-04-03-Shader.md
@@ -14,7 +14,6 @@ image:
 ![](/images\CG\arch.jpg)
 다시 Pipeline!!
 
-Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 Fragment Shader를 실행한 후 Link 하고 Use한다.
 <br />
 <br />
 ## Vertex processor : vertex data -> (normalized) vertex
@@ -36,7 +35,6 @@ Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 F
 ## Rasterization
 * Primitive Assembly에서 생성된 모양에 따라 Fragment들을 생성한다.
 
-<br />
 ## Fragment Shader : primitive -> fragments
 * 각 vertex의 색깔이 정해지게 되고 점 선 삼각형의 모양이 정해지고 Rasterization까지 실행된 뒤에 실행된다.
 * 각 vertex 색깔을 기반으로 interpolation이 일어나게 되어 색이 채워지게 된다.
@@ -48,22 +46,10 @@ Create하고 Attach를 두 번 하는데 Vertex Shader 먼저하고 그 뒤에 F
 
 ---
 
-<br />
-## GLSL
-OpenGL Shader Language
-<br />
-> ### Data Type
-
-* Matrix : mat3, mat4
-* Vectors : vec2, vec3, vec
-* 더 정리할 것
-
-<br />
-
-## GPU Architecture
-### Vertex Shader
+# GPU Architecture
+## Vertex Shader
 ![Vertex Shader](/images/CG/vertex_shader.jpg)
-#### Input
+### Input
 - Uniform
     - 모두가 함께 쓰는 Global input variable
 - Attribute
@@ -72,7 +58,7 @@ OpenGL Shader Language
 - Sampler(optional)
     - Texture를 이용 (나중에..)
 
-#### Output
+### Output
 - Varying
     - Vertex Shader의 결과물로써 Fragment Shader의 입력 값이 된다.
     - 이 Vertex의 색깔은 (빛/투명도 등)을 계산하니까 이 색깔이야! 라고 나온 Output
@@ -84,10 +70,10 @@ OpenGL Shader Language
 - gl_PointSize
 
 <br />
-### Fragment Shader
+## Fragment Shader
 ![Fragment Shader](/images/CG/fragment_shader.jpg)
 
-#### Input
+### Input
 - gl_FragCoord(gl_Position) / gl_FrontFacing / gl_PointSize / Varying
     - Vertex Shader에서 계산되어 나온 Output을 그대로 쓴다.
     - gl_FragCoord = gl_Position?
@@ -98,7 +84,7 @@ OpenGL Shader Language
         - Pipeline이 깨진다
         - 그래서 Uniform 을 자주 바꾸면 느려지게된다.
 
-#### Output
+### Output
 - gl_FragColor
     - 어떤 Pixel의 색깔은 무엇이다. 무엇이다.
 
@@ -106,9 +92,15 @@ OpenGL Shader Language
 
 ---
 
+# GLSL
+OpenGL Shader Language
 <br />
-## Data type 관련
-> ### Swizzling and Selection
+> ## Data Type
+
+* Matrix : mat3, mat4
+* Vectors : vec2, vec3, vec4
+
+### Swizzling and Selection
 
 - x, y, z, w
 - r, g, b, a
