--- a/_posts/ComputerGraphics/2017-04-08-VBO.md
+++ b/_posts/ComputerGraphics/2017-04-08-VBO.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: VBO and Multiple Attribute
+title: VBO
 description:
-modified: 2017-04-08
+modified: 2017-06-26
 tags: [Computer Graphics, OpenGL]
 image:
   feature: background/Computer/3.jpg
@@ -11,20 +11,101 @@ image:
 ##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 ---
 
-## VBO (Vertex Buffer Object)
-### 쓰는 이유?
-매번 Draw 명령을 칠 때마다 데이터를 보내게 되면 CPU와 GPU 사이에 데이터가 많이 움직이게 되어 성능이 떨어지게 된다.  
-그렇기 때문에 **자주 쓰는 데이터**를 **VBO**를 통해서 **Graphics Memory**에 먼저 넣어둔다.
-### 장점
+# VBO (Vertex Buffer Object)
+## 쓰는 이유?
+- 매번 Draw 명령을 칠 때마다 데이터를 보내게 되면 CPU와 GPU 사이에 데이터가 많이 움직이게 되어 성능이 떨어지게 된다.  
+- 그렇기 때문에 **자주 쓰는 데이터**를 **VBO**를 통해서 **Graphics Memory**에 먼저 넣어둔다.
+- Cache Data to graphics memory
+
+## 장점
 1. Rendering Performence
 2. Memory bandwidth
 3. Power comsumption
 
-### 종류
+## Type 
 > #### GL_ARRAY_BUFFER
 
-- Vertex에 Attribute를 쭈욱 집어넣는다.
+- for vertex data 
+- 그냥 순서대로 vertex data를 넣어 그린다.
 
 > #### GL_ELEMENT_ARRAY_BUFFER
 
-- 어떻게 그릴 건지?
+- for indices of primitives
+- indice 기반으로 primitive 를 생성한다.
+
+---
+
+# VBO API`s
+
+## glGenBuffers
+
+```cpp
+void glGenBuffers(GLsizei n, GLuint* buffers)
+
+glGenBuffers(1, &vertexBuffer);
+```
+- Assign n buffer object to buffers array
+- 0 is not return (0 is reserved)
+
+<br />
+
+## glBindBuffers
+
+```cpp
+void glBindBuffers(GLenum target, GLuint buffers)
+
+glBindBuffer(GL_ARRAY_BUFFER, vertexBuffer);
+```
+- glBindBuffer binds a buffer object to the specified buffer binding point.
+- Target - [LINK](https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/glBindBuffer.xhtml) 
+  * GL_ARRAY_BUFFER - Vertex attributes
+  * GL_ELEMENT_ARRAY_BUFFER - Vertex array indices
+  * GL_TEXTURE_BUFFER - Texture data buffer
+
+<br />
+
+## glBufferData
+
+```cpp
+void glBufferData(GLenum target, GLsizeiptr size, const void *data, GLenum usage)
+
+glBufferData(GL_ARRAY_BUFFER, sizeof(vertexData), vertexData, GL_STATIC_DRAW);
+```
+- Bind된 Buffer에 Data를 넣는다.
+- Initialize or update of VBO
+- Target
+  * Bind에 할당되는 것과 같다. array buffer, element array buffer
+- Size
+  * Size of buffer data store in bytes
+- data
+  * pointer to the buffer data supplied by the application
+- usage
+  - GL_[STREAM/STATIC/DYNAMIC]_[DRAW/READ/COPY]
+  - STREAM : Buffer data가 한번 정의되고 가끔씩 쓰인다.
+    * The buffer object data will be specified once by the application and used a few times to draw primitives.
+  - STATIC : Buffer data가 한번 정의되고 자주 쓰인다.
+    * The buffer object data will be specified once by the application and used many times to draw primitives.
+  - DYNAMIC : Buffer data가 자주 갱신되고 자주 쓰인다.
+    * The buffer object data will be specified repeatedly by the application and used many times to draw primitives.
+
+<br />
+
+## glBufferSubData
+
+```cpp
+void glBufferSubData(GLenum target, GLsizeiptr size, const void *data, GLenum usage)
+```
+- 기존 Buffer를 갱신하는 데 쓰인다.
+
+<br />
+
+## glDeleteBuffer
+
+```cpp
+void glDeleteBuffer(GLsizei n, const GLuint* buffers)
+
+glDeleteBuffers(1, &vertexBuffer);
+```
+- Delete Buffer
+
+<br />
