--- a/_posts/ComputerGraphics/2017-04-03-Shader.md
+++ b/_posts/ComputerGraphics/2017-04-03-Shader.md
@@ -100,19 +100,19 @@ OpenGL Shader Language
 * Matrix : mat3, mat4
 * Vectors : vec2, vec3, vec4
 
-### Swizzling and Selection
+* ### Swizzling and Selection
 
-- x, y, z, w
-- r, g, b, a
-- s, t, p, q
-- a[2] == a.b == a.z == a.p
-- vec4 a;
-  a.yz = vec2(1.0, 2.0);
-- v = (x, y, z, w)
-    - vec4 a = v;
-    - vec4 a = v.xyzw; // default
-    - vec4 a = v.wzyx; // suffled
-    - vec4 a = v.xxyy; // repeated
-    - vec3 b = v.xyz; // selection
-    - v.xyz = b;
-    - v.xyzw = v.wzyx;
+    - x, y, z, w
+    - r, g, b, a
+    - s, t, p, q
+    - a[2] == a.b == a.z == a.p
+    - vec4 a;
+    a.yz = vec2(1.0, 2.0);
+    - v = (x, y, z, w)
+        - vec4 a = v;
+        - vec4 a = v.xyzw; // default
+        - vec4 a = v.wzyx; // suffled
+        - vec4 a = v.xxyy; // repeated
+        - vec3 b = v.xyz; // selection
+        - v.xyz = b;
+        - v.xyzw = v.wzyx;
