--- a/_posts/ComputerGraphics/2017-04-02-EGL.md
+++ b/_posts/ComputerGraphics/2017-04-02-EGL.md
@@ -56,7 +56,11 @@ image:
 
 <br />
 ## Double Buffering
-![DoubleBuffering](/images/CG/DoubleBuffering.gif)
+
+<figure>
+	<a href="/images/CG/EGL/DoubleBuffering.gif"><img src="/images/CG/EGL/DoubleBuffering.gif" alt=""></a>
+	<figcaption><a href="/images/CG/EGL/DoubleBuffering.gif" title="DoubleBuffering">DoubleBuffering</a></figcaption>
+</figure>
 [http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html](http://docs.oracle.com/javase/tutorial/extra/fullscreen/doublebuf.html
 )
 
