--- a/_posts/ComputerGraphics/2017-04-03-Shader.md
+++ b/_posts/ComputerGraphics/2017-04-03-Shader.md
@@ -11,13 +11,22 @@ image:
 ##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 ---
 
-![](/images\CG\arch.jpg)
-다시 Pipeline!!
+<figure>
+	<a href="/images/CG/Shader/arch.jpg"><img src="/images/CG/Shader/arch.jpg" alt=""></a>
+	<figcaption><a href="/images/CG/Shader/arch.jpg" title="다시 Pipeline!!">다시 Pipeline!!</a></figcaption>
+</figure>
 
 <br />
 <br />
+
 ## Vertex processor : vertex data -> (normalized) vertex
-![](/images/CG/gl_projectionmatrix01.png)
+
+<figure>
+	<a href="/images/CG/Shader/gl_projectionmatrix01.png"><img src="/images/CG/Shader/gl_projectionmatrix01.png" alt=""></a>
+	<figcaption><a href="/images/CG/Shader/gl_projectionmatrix01.png" title="gl_projectionmatrix">gl_projectionmatrix</a></figcaption>
+</figure>
+
+
 ###### Perspective Frustum and Normalized Device Coordinates (NDC)
 [무슨 말인지는 아직 잘 모르겠음 (링크) ](http://www.songho.ca/opengl/gl_projectionmatrix.html)
 
@@ -48,7 +57,12 @@ image:
 
 # GPU Architecture
 ## Vertex Shader
-![Vertex Shader](/images/CG/vertex_shader.jpg)
+
+<figure>
+	<a href="/images/CG/Shader/vertex_shader.jpg"><img src="/images/CG/Shader/vertex_shader.jpg" alt=""></a>
+	<figcaption><a href="/images/CG/Shader/vertex_shader.jpg" title="Vertex Shader">Vertex Shader</a></figcaption>
+</figure>
+
 ### Input
 - Uniform
     - 모두가 함께 쓰는 Global input variable
@@ -71,7 +85,11 @@ image:
 
 <br />
 ## Fragment Shader
-![Fragment Shader](/images/CG/fragment_shader.jpg)
+
+<figure>
+	<a href="/images/CG/Shader/fragment_shader.jpg"><img src="/images/CG/Shader/fragment_shader.jpg" alt=""></a>
+	<figcaption><a href="/images/CG/Shader/fragment_shader.jpg" title="Fragment Shader">Fragment Shader</a></figcaption>
+</figure>
 
 ### Input
 - gl_FragCoord(gl_Position) / gl_FrontFacing / gl_PointSize / Varying
