--- a/_posts/ComputerGraphics/2017-06-30-Shading.md
+++ b/_posts/ComputerGraphics/2017-06-30-Shading.md
@@ -5,40 +5,75 @@ description:
 modified: 2017-06-30
 tags: [Computer Graphics, OpenGL]
 image:
-  feature: background/Computer/5.jpg
+  feature: background/Computer/7.jpg
   credit: unsplash
 ---
 ##### 개인적으로 정리하는 것이기 때문에 틀린 내용이 들어가 있을 수 있습니다.
 ---
 
-# Perspective Projection 
+# Light Source Model
 
-<figure class = "half">
-<a href="/images/CG/Perspective/perspective_projection1.png" title="Perspective_projection"><img src = "/images/CG/Perspective/perspective_projection1.png"></a>
-<a href="/images/CG/Perspective/ortho_projection.png" title="Ortho_projection"><img src = "/images/CG/Perspective/ortho_projection.png"></a>
-<figcapture><a href="https://stackoverflow.com/questions/14095796/opengl-es-not-working-as-desired/14125490" title = "Perspective_projection">Perspective_and_Orthogonal_projection</a></figcapture>
+- Computer Grapics로 빛을 표현하기는 너무 어려운 작업이다.
+- 광원에서 나오는 빛, 반사되어 들어오는 빛 등등 무수히 많은 변수가 존재한다.
+- 그래서 아래 그림과 같이 최대한 단순화 시켜서 사용한다.
+
+<figure>
+<a href="/images/CG/shading/light_source.png" title="Point_and_Parallel"><img src = "/images/CG/shading/light_source.png"></a>
+<figcapture><a href="/images/CG/shading/light_source.png" title = "Point_and_Parallel">Point_and_Parallel</a></figcapture>
 </figure>
 
 <figure>
-<a href="/images/CG/Perspective/perspective_projection.png" title="Perspective_projection"><img src = "/images/CG/Perspective/perspective_projection.png"></a>
-<figcapture><a href="https://gamedev.stackexchange.com/questions/136007/projection-texture-mapping" title = "Perspective_projection">Perspective_projection</a></figcapture>
+<a href="/images/CG/shading/surface_light.jpg" title="Surface_Light"><img src = "/images/CG/shading/surface_light.jpg"></a>
+<figcapture><a href="/images/CG/shading/surface_light.jpg" title = "Surface_Light">Surface_Light</a></figcapture>
 </figure>
 
-- 거리에 따라 **Field Of View** 가 변하게 된다.
-- 카메라로부터 보이게 되는 영역이 위의 그림처럼 사각뿔 형태를 띄게 된다.
-- 사각뿔을 우리가 보고자 하는 영역에 따라 **Near-clip / Far-clip**을 진행한다.
-- Far-clip의 경우 너무 멀리 지정하면 안되는 데 그 이유는 보통 255단계로 z-buffer를 할당하는 데 너무 멀게 잡을 경우 **z-buffer 가 잘 작동하지 않을 수 있기 때문**이다.
-- clipping을 진행한 사각뿔을 **Frustrum**이라 한다.
+<figure>
+<a href="/images/CG/shading/spot_light.png" title="Spot_Light"><img src = "/images/CG/shading/spot_light.png"></a>
+<figcapture><a href="/images/CG/shading/spot_light.png" title = "Spot_Light">Spot_Light</a></figcapture>
+</figure>
+
+## Point Light (점 광원)
+- 실제로 존재할 수 없는 빛의 형태이다.
+- 한 점에서 모든 방향으로 뻗어나가는 빛이다.
+- 점이기 때문에 3 DOF이다.
+- **빛의 세기는 거리의 제곱에 반비례한다**
+  - 거리가 두배가 되면 4배 어두워진다
 
 <br/>
 
-## 진행하는 방법
+## Parallel Light (평행 광원)
+- 광원이 아주 먼 곳에 있는 빛의 형태이다 (태양)
+- 광원이 매우 멀리 있기 때문에 이곳에서는 빛이 평행하여 들어온다.
+- 거리가 멀어져도 어두워지지 않는다고 가정한다.
+  - 광원과 물체와의 거리에 비해 Viewport 상 거리가 매우 작기 때문에 어두워짐을 무시한다.
 
-- 진행하는 방법은 여러 가지가 존재하며 주어진 parameter에 따라 적절히 사용한다.
+<br/>
 
+# Material Model
 
-1. Near-clip 좌표 / Far-clip좌표 를 이용한 방법
-2. Near-clip 좌표 / FOV 를 이용한 방법? 등이 있다. 
+<figure>
+<a href="/images/CG/shading/material_model.jpg" title="Material_Model"><img src = "/images/CG/shading/material_model.jpg"></a>
+<figcapture><a href="/images/CG/shading/material_model.jpg" title = "Material_Model">Material_Model</a></figcapture>
+</figure>
+
+## Reflection (반사)
+- photon이 맞고 튀어나가는 것
+- 100% Reflection에 가까운 Material -> 거울
+
+## Absorption 
+- Material이 photon을 잡아먹는 현상
+- 100% Absorption이 일어나는 Material -> 흑체
+
+## Refraction (굴절)
+- 밀도 차이에 의해 빛이 구부러져서 이동하는 현상
+
+## Radiation (발광)
+- 스스로 빛을 내는 현상
+
+## Deflection (편광)
+- 입사각이 매우 작을 때 일어나는 현상?
+- HUD (Heads Up Display)
+
 
 
 --- 
