--- a/_posts/ComputerGraphics/2017-06-29-Shading.md
+++ b/_posts/ComputerGraphics/2017-06-29-Shading.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Projection Transform
+title: Shading
 description:
-modified: 2017-06-30
+modified: 2017-06-29
 tags: [Computer Graphics, OpenGL]
 image:
   feature: background/Computer/7.jpg
@@ -49,6 +49,8 @@ image:
 
 <br/>
 
+---
+
 # Material Model
 
 <figure>
@@ -74,6 +76,60 @@ image:
 - 입사각이 매우 작을 때 일어나는 현상?
 - HUD (Heads Up Display)
 
+<br/>
 
+---
 
+# Illumination Model
+
+<figure>
+<a href="/images/CG/shading/phong.png" title="Phong_Shading"><img src = "/images/CG/shading/phong.png"></a>
+<figcapture><a href="/images/CG/shading/phong.png" title = "Phong_Shading">Phong_Shading</a></figcapture>
+</figure>
+
+## Light Radiation
+  - 가장 간단한 모델, 빛의 색깔과 세기만
+  - Neon, Sun, ...
+
+## Surface Ambient (환경광) [^1]
+  - 직접적인 광원으로부터의 반사 뿐 아니라 광원 외의 **주변 물체**들이 방출하는 빛이 관찰자가 보는 물체에 반사되어 관찰자에게 도달할 수도 있다.
+  - Ambient 는 다른 표면에 반사되어 물체의 색에 영향을 주는 빛을 모델링한다.
+  - 가장 좋은 방법은 주변 모든 물체로부터 영향 받는 것을 계산하는 것이지만 대부분 Ambient 값을 상수로 하여 취급한다.
+  - Ambient 값만 사용할 경우 위의 그림처럼 명암 차이가 없이 같은 밝기로 보일 것이다.
+
+[^1]: http://celdee.tistory.com/525
+
+## Surface Diffuse + Light (난반사)
+ - 난반사의 경우 특정한 방향이 아닌 여러 방향으로 불규칙하게 반사가 이루어진다.
+ - 불규칙하게 이루어지는 반사를 모두 계산할 수 없기 때문에 모든 방향으로 균일하고 같은 세기로 반사된다고 가정하여 근사하여 사용한다.
+ - 그 중 하나로 Lambertian Law가 있다.
+ - Diffuse를 통해 명암이 표현할 수 있게 된다.
+
+## Surface Specular + Light (정반사)
+  - 광원의 색이 그대로 관찰자에게 보여지는 하이라이트와 같은 부분을 계산한다.
+
+## Transparency
+
+## Reflection
+
+## Refraction
+
+## Shadow casting
+
+## Global Illumination
+
+<br/>
+
+---
+
+# Shading
+
+<figure>
+<a href="/images/CG/shading/shading.GIF" title="Shading"><img src = "/images/CG/shading/shading.GIF"></a>
+<figcapture><a href="/images/CG/shading/shading.GIF" title = "Shading">Shading</a></figcapture>
+</figure>
+
+## Flat Shading
+- polygon 단위로 진행한다.
+- 
 --- 
