--- a/_posts/ComputerGraphics/2017-06-29-Shading.md
+++ b/_posts/ComputerGraphics/2017-06-29-Shading.md
@@ -74,7 +74,7 @@ image:
 
 ## Deflection (편광)
 - 입사각이 매우 작을 때 일어나는 현상?
-- HUD (Heads Up Display)
+- HUD (Heads Up Display) 에 사용
 
 <br/>
 
@@ -125,8 +125,13 @@ image:
 # Shading
 
 <figure>
-<a href="/images/CG/shading/shading.GIF" title="Shading"><img src = "/images/CG/shading/shading.GIF"></a>
-<figcapture><a href="/images/CG/shading/shading.GIF" title = "Shading">Shading</a></figcapture>
+<a href="/images/CG/shading/phong.png" title="Phong_Shading"><img src = "/images/CG/shading/phong.png"></a>
+<figcapture><a href="/images/CG/shading/phong.png" title = "Phong_Shading">Phong_Shading</a></figcapture>
+</figure>
+
+<figure>
+<a href="/images/CG/shading/shading.gif" title="Shading"><img src = "/images/CG/shading/shading.gif"></a>
+<figcapture><a href="/images/CG/shading/shading.gif" title = "Shading">Shading</a></figcapture>
 </figure>
 
 ## Flat Shading
