--- a/_posts/ComputerGraphics/2017-06-29-Shading.md
+++ b/_posts/ComputerGraphics/2017-06-29-Shading.md
@@ -19,17 +19,17 @@ image:
 
 <figure>
 <a href="/images/CG/shading/light_source.png" title="Point_and_Parallel"><img src = "/images/CG/shading/light_source.png"></a>
-<figcapture><a href="/images/CG/shading/light_source.png" title = "Point_and_Parallel">Point_and_Parallel</a></figcapture>
+<figcaption><a href="/images/CG/shading/light_source.png" title = "Point_and_Parallel">Point_and_Parallel</a></figcaption>
 </figure>
 
 <figure>
 <a href="/images/CG/shading/surface_light.jpg" title="Surface_Light"><img src = "/images/CG/shading/surface_light.jpg"></a>
-<figcapture><a href="/images/CG/shading/surface_light.jpg" title = "Surface_Light">Surface_Light</a></figcapture>
+<figcaption><a href="/images/CG/shading/surface_light.jpg" title = "Surface_Light">Surface_Light</a></figcaption>
 </figure>
 
 <figure>
 <a href="/images/CG/shading/spot_light.png" title="Spot_Light"><img src = "/images/CG/shading/spot_light.png"></a>
-<figcapture><a href="/images/CG/shading/spot_light.png" title = "Spot_Light">Spot_Light</a></figcapture>
+<figcaption><a href="/images/CG/shading/spot_light.png" title = "Spot_Light">Spot_Light</a></figcaption>
 </figure>
 
 ## Point Light (점 광원)
@@ -55,7 +55,7 @@ image:
 
 <figure>
 <a href="/images/CG/shading/material_model.jpg" title="Material_Model"><img src = "/images/CG/shading/material_model.jpg"></a>
-<figcapture><a href="/images/CG/shading/material_model.jpg" title = "Material_Model">Material_Model</a></figcapture>
+<figcaption><a href="/images/CG/shading/material_model.jpg" title = "Material_Model">Material_Model</a></figcaption>
 </figure>
 
 ## Reflection (반사)
@@ -84,7 +84,7 @@ image:
 
 <figure>
 <a href="/images/CG/shading/phong.png" title="Phong_Shading"><img src = "/images/CG/shading/phong.png"></a>
-<figcapture><a href="/images/CG/shading/phong.png" title = "Phong_Shading">Phong_Shading</a></figcapture>
+<figcaption><a href="/images/CG/shading/phong.png" title = "Phong_Shading">Phong_Shading</a></figcaption>
 </figure>
 
 ## Light Radiation
@@ -125,16 +125,58 @@ image:
 # Shading
 
 <figure>
-<a href="/images/CG/shading/phong.png" title="Phong_Shading"><img src = "/images/CG/shading/phong.png"></a>
-<figcapture><a href="/images/CG/shading/phong.png" title = "Phong_Shading">Phong_Shading</a></figcapture>
+<a href="/images/CG/shading/shading.jpg" title="Shading"><img src = "/images/CG/shading/shading.jpg"></a>
+<figcaption><a href="/images/CG/shading/shading.jpg" title = "Shading">Shading</a></figcaption>
 </figure>
 
-<figure>
-<a href="/images/CG/shading/shading.gif" title="Shading"><img src = "/images/CG/shading/shading.gif"></a>
-<figcapture><a href="/images/CG/shading/shading.gif" title = "Shading">Shading</a></figcapture>
-</figure>
 
 ## Flat Shading
-- polygon 단위로 진행한다.
-- 
+- Constant Shading
+- Polygon 단위로 진행하며 각 Polygon은 같은 색을 지닌다.
+- 장점
+  - 빠르다.
+- 단점
+  - Polygon 경계에서 계단효과가 일어난다.
+  - 각 Polygon의 색을 같게 하기 때문에 경계에서 급격한 변화가 일어난다.
+
+## Gouraud Shading
+  - Interpolative Shading
+  - 계단 효과를 없애는 방법
+    - 각 vertex에서 정확한 shading 값을 계산
+    - Vertex Shader에서 vertex shading 결과를 bi-linear interplate한다.
+  
+## Phong Shading
+  - Gouraud Shading 의 문제를 보완
+    - Vertex 에서의 Shading 결과를 interpolate
+    - Highlight 계산이 부정확
+  
+  - Normal Vector를 interpolate
+  - shading 결과는 각 pixel에서 다시 계산하기 때문에 느려짐
+  - Fragment Shader에서 진행
+
+## Local and global Illumination
+
+  - Local Illumination : Phong Shading model
+    - 그림자, 반사광 처리가 힘들다.
+  
+  - Global Illumination
+    1. Ray Tracing
+      - Specular, 굴절, 그림자 처리 능력
+    2. Radiosity
+      - diffuse 처리가 완벽하다.
+
+## Ray Tracing 
+  - Specular effect에 최적
+  - 본래 광원에서 빛이 나와서 우리의 눈으로 들어오는 것이 정상이고 좋지만 비효율적이다.
+  - 그래서 거꾸로 카메라에서 Ray를 물체에 쏴서 거꾸로 계산하는 방식을 사용한다.
+  - 자세한 내용은 아래 Link를 참조
+    - [[Link] Graphics Programming - Shading Lecture Summary](https://goo.gl/tcwbEC)
+
+## Radiosity
+  - Diffuse effect에 최적
+  - 본래 모든 surface 들 간의 서로 반사광을 주고 받는 것을 계산하여 light interaction으로 modeling해야하지만 비효율적이다.
+  - 그래서 모든 surface를 작은 patch로 분할하고 각 patch마다 diffuse term을 따로 계산한다.
+  - form factor
+    - patch 1개에서 다른 patch로 가는 energy
+
 --- 
