--- a/_posts/ComputerGraphics/2017-06-30-Shading.md
+++ b/_posts/ComputerGraphics/2017-06-30-Shading.md
@@ -97,7 +97,7 @@ image:
   - 가장 좋은 방법은 주변 모든 물체로부터 영향 받는 것을 계산하는 것이지만 대부분 Ambient 값을 상수로 하여 취급한다.
   - Ambient 값만 사용할 경우 위의 그림처럼 명암 차이가 없이 같은 밝기로 보일 것이다.
 
-[^1]: http://celdee.tistory.com/525
+[^1]: [Ambient Light, Diffuse Light, Specular Reflection, 날개의 기억](http://celdee.tistory.com/525)
 
 ## Surface Diffuse + Light (난반사)
  - 난반사의 경우 특정한 방향이 아닌 여러 방향으로 불규칙하게 반사가 이루어진다.
