--- a/_posts/ComputerGraphics/2017-07-01-Texture.md
+++ b/_posts/ComputerGraphics/2017-07-01-Texture.md
@@ -27,7 +27,7 @@ image:
 
   3. Reflection or Environment Mapping
     - Paint an image of the environment
-    - (정확히 잘 모르지만) 반사되어온 주변 환경의 이미지 영향을 고려한다.
+    - 반사되어진 주변 환경의 이미지 영향을 고려한다.
 
 ## 종류 다시
   1. Color : Texture Mapping
@@ -45,15 +45,86 @@ image:
   5. Transparency : Etched Glass
     - 물체의 투명도를 조절
 
-## Texture Mapping
+<br/>
 
+---
 
+# Texture Mapping
 
+## Space
+  - Texture Space
+    - [u, v] or [s, t] 좌표계를 사용
+    - 2차원 image를 크기에 상관없이 [0,1] * [0,1] 로 **normalize** 하여 사용
+    - texel : texture element (pixel in the texture)
+  
+  - Object Space
+    - 각 vertex 좌표계로 normalize 된 texture image의 [u, v] 좌표계 어디에 해당하는지 **Mapping**해준다.
+  
+  - Screen Space
+    - Mapping된 결과를 기반으로 각 fragment에 대응하는 texture image를 그린다.
 
+## Coordinate System
 
 <figure>
-<a href="/images/CG/Step-1.gif" title="Point_and_Parallel"><img src = "/images/CG/Step-1.gif"></a>
-<figcaption><a href="/images/CG/Step-1.gif" title = "Point_and_Parallel">Point_and_Parallel</a></figcaption>
+<a href="/images/CG/Texture/coordinates.jpg" title="Coordinates"><img src = "/images/CG/Texture/coordinates.jpg"></a>
+<figcaption><a href="/images/CG/Texture/coordinates.jpg" title = "Coordinates">Coordinates</a></figcaption>
 </figure>
 
+- Parametric coordinates
+  - May be used to model curves and surfaces
+
+- Texture coordinates
+  - Used to identify points in the image to be mapped
+
+- Object or World coordinates
+  - Conceptually, where the mapping takes place
+
+- Window coordinates
+  - Where the final image is really produced
+
+1. 화면에서 보이는 부분에 해당하는 Texture 좌표를 찾는다.
+
+2. Texture 좌표에 해당 하는 Texture image의 부분을 가져와서 그린다.
+
+- 보통 이렇게 거꾸로 계산을 진행한다.
+
+## Texture Mapping 방법
+
+### practical 한 방법
+
+<figure>
+<a href="/images/CG/Texture/uv.png" title="set_Coordinate"><img src = "/images/CG/Texture/uv.png"></a>
+<figcaption>[Link] <a href="http://www.opengl-tutorial.org/beginners-tutorials/tutorial-5-a-textured-cube/" title = "set_Coordinate">set_Coordinate</a></figcaption>
+</figure>
+
+  - Polygon mesh 의 각 vertex에 해당하는 Texture Coordinate (s, t)를 직접 설정
+
+<br/>
+
+### Sphere Mapping (Spherical)
+
+<figure>
+<a href="https://upload.wikimedia.org/wikipedia/commons/b/b3/UV_mapping_checkered_sphere.png" title="set_Coordinate"><img src = "https://upload.wikimedia.org/wikipedia/commons/b/b3/UV_mapping_checkered_sphere.png"></a>
+<figcaption>[Link] <a href="https://commons.wikimedia.org/wiki/File:UV_mapping_checkered_sphere.png" title = "Sphere Mapping">Sphere Mapping</a></figcaption>
+</figure>
+
+- 지구처럼 polar coordinates를 사용한다.
+
+<br/>
+
+### Cube Mapping 
+
+<figure class = "third">
+<a href="/images/CG/Texture/cube_map.jpg" title="Cube_Map"><img src = "/images/CG/Texture/cube_map.jpg"></a>
+<a href="/images/CG/Texture/cube_map2.png" title="Cube_Map"><img src = "/images/CG/Texture/cube_map2.png"></a>
+<a href="/images/CG/Texture/cube_map3.png" title="Cube_Map"><img src = "/images/CG/Texture/cube_map3.png"></a>
+<figcaption>[Link] <a href="https://scalibq.wordpress.com/2013/06/23/cubemaps/" title = "Cube_Map">Cube_Map</a></figcaption>
+</figure>
+
+- Texture image를 전개도 처럼 만들어 사용한다.
+
+<br/>
+
 --- 
+
+[참고] [A Textured Cube](http://www.opengl-tutorial.org/beginners-tutorials/tutorial-5-a-textured-cube/)
