--- a/_posts/UnrealEngine/2017-08-13-TArray.md
+++ b/_posts/UnrealEngine/2017-08-13-TArray.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: TArray 
+title: TArray
 description:
 modified: 2017-08-10
+published: false
 tags: [Unreal Engine]
 image:
   feature: background/Computer/3.jpg
@@ -15,7 +16,7 @@ image:
 
 ---
 
-[참고]  
-[TArray: Arrays in Unreal Engine](https://docs.unrealengine.com/latest/INT/Programming/UnrealArchitecture/TArrays/index.html)  
+[참고]
+[TArray: Arrays in Unreal Engine](https://docs.unrealengine.com/latest/INT/Programming/UnrealArchitecture/TArrays/index.html)
 
---- 
+---
